// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders Switch correctly with more props 1`] = `
<div>
  <button
    aria-checked="false"
    class="zw-switch zw-switch--disabled zw-switch--sm"
    role="switch"
    type="button"
  />
</div>
`;

exports[`Switch renders normal Switch correctly 1`] = `
<div>
  <button
    aria-checked="false"
    class="zw-switch"
    role="switch"
    type="button"
  />
</div>
`;
